# bubble-OMR

./: 80questions-inkscape-smallfont.afdesign  README.md  bubble_score.py  bubble_stats.py  pyproject.toml  scan_aligner.py  zone_visualizer.py
bubble forms/: 80questions.json  config.json  vector64_config.json  vector80_config.json
helpful scripts/: scan_aligner_WORKS_NOARUCO.py
helpful scripts/fake_data/: bubble_synth.py  fake_students.csv  samplecommands.txt
helpful scripts/fake_student_data/: results.csv
src/bubble_omr/: align_core.py  app_streamlit.py  cli.py  config_io.py  grade_core.py  grade_core_BAK2.py  gui_launcher.py  scoring_defaults.py  visualize_core.py
src/bubble_omr/tools/: bubble_score.py  bubble_stats.py  scan_aligner.py  zone_visualizer.py
templates/: 64_question_config.yaml  key.txt
templates/ArUco markers/: make_aruco.py
